--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -21,8 +21,8 @@
     <!-- LOGIN FORM -->
     <form action="/login" method="post">
         <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="form-control" name="email">
+            <label>Email or Phone Number</label>
+            <input type="text" class="form-control" name="userId">
         </div>
         <div class="form-group">
             <label>Password</label>
